# slowtext

./: .travis.yml  SlowText.hs  slowtext.cabal  test.hs
